--- a/WebClient/src/identity/register.html
+++ b/WebClient/src/identity/register.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4">
       <form method="post" submit.trigger="submit()">
-        <h4>Create a new account - Custom.</h4>
+        <h4>Create a new account.</h4>
         <hr />
 
         <div class="form-group">
