--- a/WebClient/src/main-router.html
+++ b/WebClient/src/main-router.html
@@ -1,5 +1,6 @@
 <template>
-  <require from="bootstrap/dist/css/bootstrap.min.css"></require>
+  <require from="AdminLTE/dist/css/adminlte.min.css"></require>
+  <!--<require from="bootstrap/dist/css/bootstrap.min.css"></require>-->
   
   <div class="wrapper">
     <header>
