in progress, without selectlists

--- a/WebClient/src/workobjects/details.html
+++ b/WebClient/src/workobjects/details.html
@@ -28,7 +28,7 @@
 
       <dt class="col-sm-3">
         AppUsersOnObject (
-        <a route-href="route: appusersonobjectsCreate; params.bind: {workObjectId: workObject.id}">
+        <a route-href="route: appUsersOnObjectsCreate; params.bind: {workObjectId: workObject.id}">
           Add
         </a>)
       </dt>
