--- a/WebClient/src/clients/create.html
+++ b/WebClient/src/clients/create.html
@@ -10,7 +10,7 @@
       <form submit.delegate="submit()" method="post">
         
         <div class="form-group">
-          <label class="control-label" for="Client_ClientGroupId">ClientGroupId</label>
+          <label class="control-label" for="Client_ClientGroupId">ClientGroup</label>
           <select class="form-control" id="Client_ClientGroupId" name="Client.ClientGroupId"></select>
         </div>
         <div class="form-group">
